class FlashCard {
  FlashCard(this.name, this.meaning, {required this.learned});
  String name;
  String meaning;
  bool learned; 
}
