@startuml csia
set namespaceSeparator ::

class "studyappcs::states::flashcard.dart::FlashCard" {
  +String name
  +String meaning
  +bool learned
}

class "studyappcs::states::subject.dart::Subject" {
  +String name
  +List<Topic> topics
  +Color color
  +List<int> testScores
  +String teacher
  +String classroom
  +String asArea
  +int learned
  +int total
  +double percentage
  +Topic addTopic()
  +void addScore()
}

"studyappcs::states::subject.dart::Subject" o-- "dart::ui::Color"

class "studyappcs::states::task.dart::Task" {
  +String name
  +DateTime dueDate
  +bool completed
  +Color color
  +String desc
  +int review
}

"studyappcs::states::task.dart::Task" o-- "dart::ui::Color"

class "studyappcs::states::test.dart::TestCard" {
  +String meaning
  +String name
  +String origin
}

class "studyappcs::states::test.dart::Test" {
  +Map<TestCard, bool> scored
  +String date
  +String area
  +List<String> answers
  +int id
  +int percentage
  +int correct
  +int totalAmount
}

class "studyappcs::states::topic.dart::Topic" {
  +String name
  +List<FlashCard> cards
  +void addCard()
}


@enduml
